--- a/src/pages/pagesCSS/manageUsers.css
+++ b/src/pages/pagesCSS/manageUsers.css
@@ -9,7 +9,6 @@
     text-align: center;
     border-radius: 10px;
     background: rgb(236, 232, 229);
-    margin: 100px auto; 
     box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.397);
 }
 
@@ -31,7 +30,7 @@
     max-width: 1200px; 
     list-style-type: none;
     margin: 0 auto; 
-    gap: 16px;
+    gap: 10px;
     padding: 16px;
 }
 
@@ -39,7 +38,7 @@
     .users-list {
         grid-template-columns: repeat(2, minmax(250px, 1fr));
         max-width: 800px; 
-        gap: 16px;
+        gap: 10px;
     }
 }
 
@@ -47,7 +46,7 @@
     .users-list {
         grid-template-columns: minmax(250px, 1fr);
         max-width: 400px; 
-        gap: 16px;
+        gap: 10px;
         padding: 16px;
     }
 
